# fl-adversarial-security

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/: config.yaml
configs/production/: base_config.yaml
configs/secure_aggregation/: config.yaml
deploy/: docker-compose.yml
deploy/dashboard/: .env.example  Dockerfile  docker-compose.yml
deploy/kubernetes/: deployment.yaml  hpa.yaml  service.yaml
deploy/production/: .env.example
docs/: ARCHITECTURE.md  capstone_research_paper.md
docs/benchmark/: PROJECT_SUMMARY.md  README.md
docs/dashboard/: DEMO_GUIDE.md  DEPLOYMENT.md  README.md
docs/production/: README.md  architecture.md  deployment_guide.md  legacy_pyproject.toml  privacy_guarantees.md
docs/secure_aggregation/: README.md
experiments/: demo_byzantine_robust.py  run_benchmark.py  run_dlg_attack.py  run_foolsgold.py  run_production_pipeline.py  run_property_attack.py
notebooks/: 01-attack-demonstrations.ipynb  02-defense-comparison.ipynb  03-signguard-deep-dive.ipynb  03_day14_label_flipping_attack.ipynb  04-benchmark-results.ipynb  04_day19_foolsgold_defense.ipynb  05-production-system.ipynb  05_day24_signguard_core_research.ipynb  day15_backdoor_attack.ipynb  day16_model_poisoning.ipynb  day17_byzantine_robust_aggregation.ipynb  day18_anomaly_detection_fl.ipynb  day23_secure_aggregation.ipynb  day25_membership_inference_attack.ipynb
src/: __init__.py
tests/: test_api.py  test_benchmark.py  test_dashboard.py  test_production.py  test_secure_aggregation.py
(+565 files in other folders)
