[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-adversarial-security"
version = "0.1.0"
description = "Unified FL adversarial security research repo split from fl-security-research."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
